[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatauth"
version = "0.1.0"
description = "Production-grade auth SDK for Indian apps — Email OTP, PIN, DPDP consent, device trust"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "JamBuster Technologies Pvt Ltd" }]
keywords = ["auth", "otp", "dpdp", "fastapi", "india", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/jambuster-tech/bharatauth"
Documentation = "https://bharatauth.dev/docs"
Issues = "https://github.com/jambuster-tech/bharatauth/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bharatauth*"]

[tool.mypy]
strict = true
python_version = "3.12"
